--- a/WebsiteBlazor/Pages/Home.razor
+++ b/WebsiteBlazor/Pages/Home.razor
@@ -7,6 +7,7 @@
 	<option value="32">32px</option>
 	<option value="48">48px</option>
 	<option value="64">64px</option>
+	<option value="128">128px</option>
 </select>
 <button @onclick="(() => _settings.DrawOutline = false)">Outline Colored</button>
 <button @onclick="(() => _settings.DrawOutline = true)">Outline Black</button>
