--- a/WebsiteBlazor/Pages/Home.razor
+++ b/WebsiteBlazor/Pages/Home.razor
@@ -1,18 +1,64 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<style>
+	.wrapper {
+		width: 100%;
+		border-radius: 20px;
+		background-color: #b5a78f;
+		min-height: 120px;
+		display: flex; 
+		justify-content: center;
+		align-items: center;
+	}
 
-<input type="button" @onclick="GenerateMonsterSprite">Generate</input>
-<select @bind="_settings.Dimension">
-	<option value="32">32px</option>
-	<option value="48">48px</option>
-	<option value="64">64px</option>
-	<option value="128">128px</option>
-</select>
-<button @onclick="(() => _settings.DrawOutline = false)">Outline Colored</button>
-<button @onclick="(() => _settings.DrawOutline = true)">Outline Black</button>
+	fieldset {
+		margin: 10px;
+		margin-bottom: 20px;
+	}
 
-@if(!string.IsNullOrEmpty(_sprite))
-{
-	<img src="@_sprite" style="width: 512px; image-rendering: pixelated;" />
-}
+	legend {
+		font-size: 12px !important;
+	}
+
+	button {
+		border: none;
+		border-radius: 10px;
+		padding: 5px 10px 5px 10px;
+		background-color: #302b22;
+		color: white;
+	}
+
+	.active-button {
+		background-color: #561d7e;
+	}
+</style>
+
+<div style="width: 100%; height: 100vh; background-color: #302b22; display: flex; flex-direction: column; gap: 20px; align-items: center; padding: 25px;">
+	<div id="image" class="wrapper" style="min-height: 420px;">
+		@if (!string.IsNullOrEmpty(_sprite))
+		{
+			<img src="@_sprite" style="width: 420px; image-rendering: pixelated;" />
+		}
+	</div>
+	<div id="generate" class="wrapper">
+		<button @onclick="GenerateMonsterSprite" style="width: 200px; height: 64px; display: flex; align-items: center; justify-content: center;">Generate</button>
+	</div>
+	<div id="settings" class="wrapper" style="display: block;">
+		<fieldset>
+			<legend>Dimensions (e.g. 64x64px)</legend>
+			<button @onclick="(() => _settings.Dimension = 32)" class="@(_settings.Dimension == 32 ? "active-button" : "")">32px</button>
+			<button @onclick="(() => _settings.Dimension = 48)" class="@(_settings.Dimension == 48 ? "active-button" : "")">48px</button>
+			<button @onclick="(() => _settings.Dimension = 64)" class="@(_settings.Dimension == 64 ? "active-button" : "")">64px</button>
+			<button @onclick="(() => _settings.Dimension = 128)" class="@(_settings.Dimension == 128 ? "active-button" : "")">128px</button>
+		</fieldset>
+		<fieldset>
+			<legend>Outline</legend>
+			<button @onclick="(() => _settings.DrawOutline = false)" class="@(_settings.DrawOutline == false ? "active-button" : "")">Colored</button>
+			<button @onclick="(() => _settings.DrawOutline = true)" class="@(_settings.DrawOutline == true ? "active-button" : "")">Black</button>
+		</fieldset>
+	</div>
+</div>
+
+
+
+
