--- a/WebsiteBlazor/Pages/Home.razor
+++ b/WebsiteBlazor/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@inject NavigationManager nvgMgr;
+@using System.Globalization;
 
 @page "/"
 
@@ -80,6 +81,25 @@
 		<fieldset>
 			<legend>Margin</legend>
 			<input type="range" min="0" max="12" @bind="_settings.Margin" />
+		</fieldset>
+		<fieldset>
+			<legend>Seed (when yes: same seed + settings yield same monster)</legend>
+			<button @onclick="(() => _settings.UseSeed = false)" class="@(_settings.UseSeed == false ? "active-button" : "")">No</button>
+			<button @onclick="(() => _settings.UseSeed = true)" class="@(_settings.UseSeed == true ? "active-button" : "")">Yes</button>
+			<input type="number" @bind="_settings.Seed" disabled="@(!_settings.UseSeed)" style="border-radius: 10px; width: 140px; padding: 4px 10px;" />
+		</fieldset>
+		<br />
+		<fieldset>
+			<legend>Number of Frames (@_settings.FrameCount)</legend>
+			<input type="range" min="1" max="16" @bind="_settings.FrameCount" />
+		</fieldset>
+		<fieldset>
+			<legend>Animation Speed (Duration of 1 Frame in ms, (@(_settings.FrameDelayInMs)ms))</legend>
+			<input type="range" min="20" max="200" @bind="_settings.FrameDelayInMs" />
+		</fieldset>
+		<fieldset>
+			<legend>Intensity of Animation (@_settings.AnimationIntesity)</legend>
+			<input type="range" min="0.2" max="4" step="0.1" @bind="_settings.AnimationIntesity" @bind:culture="CultureInfo.InvariantCulture" />
 		</fieldset>
 	</div>
 
